// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render checkbox correctly 1`] = `
<TouchableWithoutFeedback
  delayPressOut={255}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="checkbox"
>
  <View
    size={40}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
      ]
    }
  >
    <View
      color="primary"
      size={40}
      style={
        Object {
          "backgroundColor": "#f4ab34",
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 40,
        }
      }
    />
    <View>
      <View
        color="primary"
        disabled={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#777777",
              "borderRadius": 3,
              "borderWidth": 2,
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
        testID="checkbox-circle"
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Checkbox component should render checkbox selected but disabled correctly 1`] = `
<TouchableWithoutFeedback
  delayPressOut={255}
  disabled={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="checkbox"
>
  <View
    size={40}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
      ]
    }
  >
    <View
      color="primary"
      size={40}
      style={
        Object {
          "backgroundColor": "#f4ab34",
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 40,
        }
      }
    />
    <View>
      <View
        color="primary"
        disabled={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#bbbbbb",
              "borderRadius": 3,
              "borderWidth": 2,
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
        testID="checkbox-circle"
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Checkbox component should render checkbox selected but disabled with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox-label"
>
  <TouchableWithoutFeedback
    delayPressOut={255}
    disabled={true}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    testID="checkbox"
  >
    <View
      size={40}
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
        ]
      }
    >
      <View
        color="primary"
        size={40}
        style={
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 20,
            "height": 40,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
            "width": 40,
          }
        }
      />
      <View>
        <View
          color="primary"
          disabled={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#bbbbbb",
                "borderRadius": 3,
                "borderWidth": 2,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
          testID="checkbox-circle"
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "color": "#bbbbbb",
          "fontSize": 14,
          "letterSpacing": 0.22,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;

exports[`Checkbox component should render checkbox selected correctly 1`] = `
<TouchableWithoutFeedback
  delayPressOut={255}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="checkbox"
>
  <View
    size={40}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
      ]
    }
  >
    <View
      color="primary"
      size={40}
      style={
        Object {
          "backgroundColor": "#f4ab34",
          "borderRadius": 20,
          "height": 40,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 40,
        }
      }
    />
    <View>
      <View
        color="primary"
        disabled={false}
        selected={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#f4ab34",
              "borderColor": "#f4ab34",
              "borderRadius": 3,
              "borderWidth": 2,
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
        testID="checkbox-circle"
      >
        <View
          style={
            Array [
              Object {
                "borderBottomWidth": 2,
                "borderColor": "#fafafa",
                "borderLeftWidth": 2,
                "height": 8,
                "transform": Array [
                  Object {
                    "translateY": -2,
                  },
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 14,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Checkbox component should render checkbox with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="checkbox-label"
>
  <TouchableWithoutFeedback
    delayPressOut={255}
    disabled={false}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    testID="checkbox"
  >
    <View
      size={40}
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
        ]
      }
    >
      <View
        color="primary"
        size={40}
        style={
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 20,
            "height": 40,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
            "width": 40,
          }
        }
      />
      <View>
        <View
          color="primary"
          disabled={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#777777",
                "borderRadius": 3,
                "borderWidth": 2,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
          testID="checkbox-circle"
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "color": "#333333",
          "fontSize": 14,
          "letterSpacing": 0.22,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;
